--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "🚫 Note: All lines that start with 🚫 are instructions and should be deleted before this is posted to your portfolio. This is intended to be a guideline. Feel free to add your own flare to it.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,9 +25,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "heroku": "^7.38.1",
     "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.7",
+    "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "pg": "^7.15.1",
     "sqlite3": "^4.1.1",
