server test complete

--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "pg": "^7.15.1",
     "sqlite3": "^4.1.1",
     "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
