--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "pg": "^7.15.1",
+    "postgresql": "^0.0.1",
     "sqlite3": "^4.1.1",
     "supertest": "^4.0.2"
   },
