renamed to users from user ont table connection added test coverage

--- a/package.json
+++ b/package.json
@@ -6,7 +6,19 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "test": "jest"
+    "test": "jest",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "run-seeds": "knex seed:run ",
+    "coverage": "jest --coverage --detectOpenHandles --forceExit || true"
+  },
+	"jest": {
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/node_modules/**",
+      "!**/vendor/**",
+      "!**/__tests__/**"
+    ]
   },
   "repository": {
     "type": "git",
