--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "test": "jest --detectOpenHandles --forceExit",
+    "coverage": "jest --coverage --detectOpenHandles --forceExit || true"
+  },
+	"jest": {
+    "collectCoverageFrom": [
+      "**/*.js",
+      "!**/node_modules/**",
+      "!**/vendor/**",
+      "!**/__tests__/**"
+    ]
   },
   "repository": "https://github.com/Lambda-School-Labs/quake-be.git",
   "license": "MIT",
@@ -11,6 +21,7 @@
     "express": "^4.17.1",
     "gitignore": "^0.6.0",
     "helmet": "^3.23.2",
+    "jest": "^26.1.0",
     "knex": "^0.21.1",
     "knex-cleaner": "^1.3.0",
     "nodemon": "^2.0.4",
