--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --detectOpenHandles --forceExit",
     "coverage": "jest --coverage --detectOpenHandles --forceExit || true"
   },
-	"jest": {
+  "jest": {
     "collectCoverageFrom": [
       "**/*.js",
       "!**/node_modules/**",
@@ -18,12 +18,14 @@
   "repository": "https://github.com/Lambda-School-Labs/quake-be.git",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "gitignore": "^0.6.0",
     "helmet": "^3.23.2",
     "jest": "^26.1.0",
     "knex": "^0.21.1",
     "knex-cleaner": "^1.3.0",
+    "node-cron": "^2.0.3",
     "nodemon": "^2.0.4",
     "sqlite3": "^4.2.0"
   }
