--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "coverage": "jest --coverage --detectOpenHandles --forceExit || true"
   },
   "engines": {
-      "node": "14.4.0"
+      "node": "14.x"
   },
 	"jest": {
     "collectCoverageFrom": [
