--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-cron": "^2.0.3",
     "nodemon": "^2.0.4",
     "pg": "^8.2.2",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^4.2.0",
+    "supertest": "^4.0.2"
   }
 }
