--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "server": "nodemon index.js",
     "test": "jest --detectOpenHandles --forceExit",
-    "coverage": "jest --coverage --detectOpenHandles --forceExit || true"
+    "coverage": "jest --coverage --detectOpenHandles --forceExit || true",
+    "refresh": "node ./activity/refresh-router.js"
   },
   "engines": {
-    "node": "12.x"
+    "node": "14.x"
   },
   "jest": {
     "collectCoverageFrom": [
