--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nodemon": "^2.0.4",
     "pg": "^8.2.2",
     "sqlite3": "^4.2.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "twilio": "^3.48.1"
   }
 }
