--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": "14.x"
   },
   "jest": {
+    "testEnvironment": "node",
     "collectCoverageFrom": [
       "**/*.js",
       "!**/node_modules/**",
