--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "repository": "https://github.com/Lambda-School-Labs/quake-be.git",
   "license": "MIT",
   "dependencies": {
+    "@turf/distance": "^6.0.1",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
@@ -38,7 +39,7 @@
     "pg": "^8.2.2",
     "sqlite3": "^4.2.0",
     "supertest": "^4.0.2",
+    "turf": "^3.0.14",
     "twilio": "^3.48.1"
   }
 }
-
