--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^26.1.0",
     "knex": "^0.21.1",
     "knex-cleaner": "^1.3.0",
+    "moment": "^2.27.0",
     "node-cron": "^2.0.3",
     "nodemon": "^2.0.4",
     "pg": "^8.2.2",
